# bracket

./: Makefile  README.md  bot.py  compose.yml  config.py  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 059acadf4b21_create_email_column.py  075a5d4b421a_add_scrim_time_column.py  13f33b7a50e5_add_timezone_in_datefields.py  17c9006eb3d5_update_session_table.py  27f345fb4e4a_create_initial_tables.py  29e71ed85861_add_scrim_config_table.py  32821c9a21a5_rename_scrim_channel_to_scrim_add_more_.py  37995e78fe2c_add_registration_open_flag.py  420350b049d1_create_extension.py  452e5f2a42ba_remove_current_size_col.py  5282300f7d6f_add_postgres_extensions.py  5d53120485c5_update_session_table.py  732c3780d76a_add_registration_opening_and_closing_.py  864f559cac50_update_session_table.py  8666a2f1870d_create_initial_tables.py  91b6ed4b2e1d_update_session_table.py  9308e5551939_create_initial_tables.py  9c28ce6d395b_add_secret_column.py  ad38a820fa5b_create_initial_tables.py  b178b2513c03_add_team_member_table.py  bceb537bdd96_create_initial_tables.py  c992413a12a3_create_initial_tables.py  dfbfc47692cb_add_scrim_id_in_team_member.py  e0f00a7f0c97_create_initial_tables.py  f00fe15b036b_create_initial_tables.py  f87044fba84a_init.py
apps/api/: main.py  pyproject.toml
apps/bot/: main.py  pyproject.toml
backend/: app.py  db_funcs.py  oauth.py  serializers.py  utils.py
backend/middlewares/: auth.py
cogs/: __init__.py  general.py  owner.py  scheduler.py
cogs/scrims/: __init__.py
cogs/tournament/: __init__.py  config.py  embeds.py  invite_member_view.py
configs/: __init__.py  settings.py
core/: bracket.py  cog.py  context.py  interaction.py  logger.py
data/: scrim_config.py
db/: __init__.py
db/functions/: __init__.py
db/models/: __init__.py  auth.py  base.py  guild_config.py  scrim.py  scrims_channel.py  task.py  team.py  tournament.py
db/queries/: __init__.py  tournaments.py
db/repository/: scrim_config.py
extended_types/: __init__.py
lib/: scrims.py
modals/setup/: step1.py  (+2 more)
redis_manager/: __init__.py
utils/: __init__.py  interaction.py
(+18 files in other folders)
