[project]
name = "bracket-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["asyncpg>=0.30.0", "configs", "db", "psycopg2-binary>=2.9.10"]

[tool.uv.workspace]
members = ["apps/bot", "packages/db", "packages/configs", "apps/api"]

[tool.uv.sources]
configs = { workspace = true }
db = { workspace = true }

[tool.pyright]
include = ["apps/bot", "packages/db"]
venvPath = "."
venv = ".venv"

[dependency-groups]
dev = ["alembic>=1.16.5"]
